--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
     "n_samples": 100,
     "n_features": 100,
     "n_trials": 1,
-    "image_name_base": "TrainingDurations"
+    "image_name_base": "TrainingDurations",
+    "results_directory": "Results"
 }
