Add logs directory automatically

--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
     "n_features": 100,
     "n_trials": 1,
     "image_name_base": "TrainingDurations",
-    "results_directory": "Results"
+    "results_directory": "Results",
+    "logs_directory": "Logs"
 }
