--- a/config.json
+++ b/config.json
@@ -1,11 +1,10 @@
 {
-    "n_jobs_to_test": [1, 3, 5, 10],
+    "n_jobs_to_test": -1,
     "models": ["RandomForestClassifier", "KNeighborsClassifier"],
     "parallelization_backends": ["threading", "loky"],
     "n_samples": 100,
     "n_features": 100,
     "n_trials": 1,
     "image_name_base": "TrainingDurations",
-    "results_directory": "Results",
-    "logs_directory": "Logs"
+    "results_directory": "Results"
 }
