--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
     "n_jobs_to_test": -1,
-    "models": ["RandomForestClassifier", "KNeighborsClassifier"],
-    "parallelization_backends": ["threading", "loky"],
-    "n_samples": 100,
-    "n_features": 100,
-    "n_trials": 1,
+    "models": ["LogisticRegression", "MLPClassifier", "RandomForestClassifier"],
+    "parallelization_backends": ["threading"],
+    "n_samples": 10000,
+    "n_features": 10000,
+    "n_trials": 3,
     "image_name_base": "TrainingDurations",
     "results_directory": "Results"
 }
